Implemented HW inventory change adapter
Signed-off-by: cmcheung <chi.m.cheung@intel.com>