@@ -4,21 +4,14 @@
 //
 package com.intel.dai.dsimpl.voltdb;
 
-import org.apache.commons.collections4.CollectionUtils;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import com.google.gson.JsonIOException;
-import com.google.gson.JsonSyntaxException;
 import com.intel.dai.dsapi.HWInvLoc;
 import com.intel.dai.dsapi.HWInvTree;
 import com.intel.dai.dsapi.HWInvUtil;
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
+import org.apache.commons.collections4.CollectionUtils;
+
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -34,11 +27,32 @@ public class HWInvUtilImpl implements HWInvUtil {
         gson = builder.create();
     }
 
-    public HWInvTree toCanonicalPOJO(String inputFileName) throws IOException, JsonIOException, JsonSyntaxException {
-        BufferedReader br = new BufferedReader(new InputStreamReader(new FileInputStream(inputFileName),
-                StandardCharsets.UTF_8));
-        return gson.fromJson(br, HWInvTree.class);
+    @Override
+    public HWInvTree toCanonicalPOJO(Path canonicalHWInvPath) {
+        try {
+            BufferedReader br = new BufferedReader(
+                    new InputStreamReader(new FileInputStream(canonicalHWInvPath.toString()),
+                            StandardCharsets.UTF_8));
+            return gson.fromJson(br, HWInvTree.class);
+        } catch (RuntimeException e) {
+            return null;
+        } catch (Exception e) {
+            // EOFException can occur if the json is incomplete
+            return null;
+        }
     }
+
+    @Override
+    public HWInvTree toCanonicalPOJO(String canonicalHWInvJson) {
+        try {
+            return gson.fromJson(canonicalHWInvJson, HWInvTree.class);
+        } catch (Exception e) {
+            // EOFException can occur if the json is incomplete
+            return null;
+        }
+    }
+
+    @Override
     public String toCanonicalJson(HWInvTree tree) {
         Comparator<HWInvLoc> compareByID = Comparator.comparing((HWInvLoc o) -> o.ID);
         if (tree != null) {
@@ -46,6 +60,8 @@ public class HWInvUtilImpl implements HWInvUtil {
         }
         return gson.toJson(tree);
     }
+
+    @Override
     public void fromStringToFile(String str, String outputFileName) throws IOException {
         try (BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(outputFileName),
                 StandardCharsets.UTF_8))) {
@@ -53,10 +69,13 @@ public class HWInvUtilImpl implements HWInvUtil {
             bw.flush();
         }
     }
+
+    @Override
     public String fromFile(Path inputFilePath) throws IOException {
-        return Files.readString(inputFilePath, StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(inputFilePath), StandardCharsets.UTF_8);
     }
 
+    @Override
     public List<HWInvLoc> subtract(List<HWInvLoc> list0, List<HWInvLoc> list1) {
         return (List<HWInvLoc>) CollectionUtils.subtract(list0, list1);
     }
